--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,40 @@ xmlrpc.php
 .idea
 _notes
 .DS_Store
+docroot/themes/*
+docroot/sites/all/themes/zurb-foundation/*
+docroot/sites/all/themes/bootstrap/*
+docroot/sites/all/themes/custom/bootstrap/*
+docroot/sites/all/themes/custom/images/*
+docroot/sites/all/themes/custom/css/*
+docroot/sites/all/themes/custom/favicon.ico
+docroot/sites/all/themes/custom/README.txt
+/docroot/sites/default/settings.php
+/docroot/sites/default/default.settings.php
+/docroot/sites/all/themes/README.txt
+/docroot/sites/all/themes/custom/templates/README.txt
+/docroot/sites/all/themes/custom/screenshot.png
+/docroot/sites/all/themes/custom/logo.png
+/docroot/sites/all/themes/custom/less/README.txt
+/docroot/sites/all/modules/custom/ajax_comments
+docroot/sites/all/modules/contrib/*
+docroot/cache/*
+docroot/404.shtml
+docroot/sites/all/libraries/*
+docroot/scripts/*
+docroot/profiles/testing/testing.profile
+docroot/profiles/*
+docroot/modules/*
+docroot/misc/*
+docroot/includes/*
+/docroot/php.ini
+/docroot/layout-styles.css
+/docroot/INSTALL.txt
+/docroot/INSTALL.sqlite.txt
+/docroot/INSTALL.pgsql.txt
+/docroot/INSTALL.mysql.txt
+/docroot/info.php
+/docroot/home.html
+/docroot/error_log
+/docroot/.result.it_upgrade.php
+/docroot/.ftpquota
